--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<button class="header-btn header-btn-main">Contact us</button>
 						<button class="icon-menu" aria-label="mobile menu button"><span></span></button>
 					</div>
-					<aside class="header__content">
+					<div class="header__content">
 						<div class="header__content-links">
 							<ul class="header__content-list">
 								<li class="header__content-item">
@@ -98,7 +98,7 @@
 									</a>
 								</li>
 							</ul>
-						</aside>
+						</div>
 						<div class="header__content-block">
 							<p class="subtitle header__content-subtitle">FUTURE OF eSPORTS</p>
 							<h1 class="header__content-title">Unleash the Next <span>Generation</span> of Gaming</h1>
